--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <div class="container">
  <div class="maks-container">
-     <canvas width="203" height="300" id="maks-canvas"></canvas>
+     <div class="canvas-container">
+         <canvas width="203" height="300" id="maks-canvas"></canvas>
+     </div>
 
      <div>
          <input class="input" placeholder="Text to speak" id="text"/>
